# ray

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/ray/: geometry.cpp  geometry.h  image.cpp  image.h  material.cpp  material.h  scene.cpp  scene.h  texture.h  types.h  window.cpp  window.h
src/stb/: stb_image.h  stb_image_write.cpp
